src/main/java/org/hpccsystems/jdbcdriver/antlr/sqlparser/generated/SQLExpressionParser.java
//// $ANTLR 3.4 /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g 2013-02-05 09:28:12
//
//package  org.hpccsystems.jdbcdriver.antlr.sqlparser.generated;
//
//
//import org.antlr.runtime.*;
//import java.util.Stack;
//import java.util.List;
//import java.util.ArrayList;
//import java.util.Map;
//import java.util.HashMap;
//
//import org.antlr.runtime.tree.*;
//
//
//@SuppressWarnings({"all", "warnings", "unchecked"})
//public class SQLExpressionParser extends Parser {
//    public static final String[] tokenNames = new String[] {
//        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD_SYM", "ALL", "ALL_FIELDS", "AND_SYM", "ANY", "ARROW", "ASC", "ASTERISK", "AS_SYM", "AT_SYM", "AVG", "A_i", "BETWEEN", "BIGINT", "BIN", "BINARY", "BITAND", "BIT_NUM", "BLOB_SYM", "BOOLEAN_SYM", "BOOL_SYM", "BYTE_SYM", "BY_SYM", "B_i", "CALL_SYM", "CASE_SYM", "CHAR", "CHARACTER_SYM", "CHARSET", "CHAR_LENGTH", "COLON", "COLONCOLON", "COLUMN", "COLUMNS_SYM", "COLUMN_SYM", "COMMA", "CONCAT", "COUNT", "C_i", "DECIMAL_SYM", "DEFAULT", "DESC", "DISTINCT", "DIVIDE", "DOLLAR", "DOT", "DOUBLE_SYM", "DO_SYM", "DQUOTE", "D_i", "EACH_SYM", "ELSE_SYM", "ELSIF_SYM", "END_SYM", "EQ_SYM", "EXISTS", "E_i", "FALSE_SYM", "FETCH_SYM", "FIELD", "FILE_SYM", "FLOAT_SYM", "FOR_SYM", "FROM", "FULL", "FUNCEXP", "FUNCTION_SYM", "F_i", "GET", "GROUP_SYM", "GTH", "G_i", "HAVING", "HEX", "HEX_DIGIT", "HEX_DIGIT_FRAGMENT", "H_i", "ID", "IF", "IFNULL", "IGNORE_SYM", "INDEX_SYM", "INNER_SYM", "INTEGER_NUM", "INTEGER_SYM", "IN_SYM", "ISNOTNULL", "ISNULL", "IS_SYM", "I_i", "JOIN_SYM", "J_i", "K_i", "LBRACK", "LCURLY", "LEFT", "LET", "LIMIT", "LISTEXP", "LONGBLOB", "LONGTEXT", "LONG_SYM", "LOWER", "LPAREN", "LTH", "L_i", "MAX_SYM", "MEDIUMBLOB", "MEDIUMINT", "MINUS", "MIN_SYM", "MOD_SYM", "M_i", "NEGATION", "NOT_EQ", "NOT_IN", "NOT_SYM", "NULL_SYM", "NUMERIC_SYM", "N_i", "OCT", "OFFSET_SYM", "ON", "ORDER_SYM", "OR_SYM", "OUTER", "O_i", "PARAMPLACEHOLDER", "PARENEXP", "PLUS", "POWER_OP", "P_i", "QUESTION", "QUOTE", "QUOTED_ID", "QUOTED_STRING", "Q_i", "RBRACK", "RCURLY", "REAL", "REAL_NUMBER", "RIGHT", "RPAREN", "R_i", "SELECT", "SEMI", "SET_VAR", "SHIFT_LEFT", "SHIFT_RIGHT", "SMALLINT", "SQUOTE", "STRAIGHT_JOIN", "STRING_SYM", "SUM", "S_i", "TABLENAME", "THEN_SYM", "TIME_SYM", "TINYBLOB", "TINYINT", "TINYTEXT", "TRUE_SYM", "T_i", "UNSIGNED_SYM", "UPPER", "USE_SYM", "U_i", "VARBINARY", "VARCHAR", "VERTBAR", "V_i", "WHEN_SYM", "WHERE", "WHITE_SPACE", "W_i", "XML_SYM", "X_i", "Y_i", "Z_i", "'@'"
//    };
//
//    public static final int EOF=-1;
//    public static final int T__183=183;
//    public static final int ADD_SYM=4;
//    public static final int ALL=5;
//    public static final int ALL_FIELDS=6;
//    public static final int AND_SYM=7;
//    public static final int ANY=8;
//    public static final int ARROW=9;
//    public static final int ASC=10;
//    public static final int ASTERISK=11;
//    public static final int AS_SYM=12;
//    public static final int AT_SYM=13;
//    public static final int AVG=14;
//    public static final int A_i=15;
//    public static final int BETWEEN=16;
//    public static final int BIGINT=17;
//    public static final int BIN=18;
//    public static final int BINARY=19;
//    public static final int BITAND=20;
//    public static final int BIT_NUM=21;
//    public static final int BLOB_SYM=22;
//    public static final int BOOLEAN_SYM=23;
//    public static final int BOOL_SYM=24;
//    public static final int BYTE_SYM=25;
//    public static final int BY_SYM=26;
//    public static final int B_i=27;
//    public static final int CALL_SYM=28;
//    public static final int CASE_SYM=29;
//    public static final int CHAR=30;
//    public static final int CHARACTER_SYM=31;
//    public static final int CHARSET=32;
//    public static final int CHAR_LENGTH=33;
//    public static final int COLON=34;
//    public static final int COLONCOLON=35;
//    public static final int COLUMN=36;
//    public static final int COLUMNS_SYM=37;
//    public static final int COLUMN_SYM=38;
//    public static final int COMMA=39;
//    public static final int CONCAT=40;
//    public static final int COUNT=41;
//    public static final int C_i=42;
//    public static final int DECIMAL_SYM=43;
//    public static final int DEFAULT=44;
//    public static final int DESC=45;
//    public static final int DISTINCT=46;
//    public static final int DIVIDE=47;
//    public static final int DOLLAR=48;
//    public static final int DOT=49;
//    public static final int DOUBLE_SYM=50;
//    public static final int DO_SYM=51;
//    public static final int DQUOTE=52;
//    public static final int D_i=53;
//    public static final int EACH_SYM=54;
//    public static final int ELSE_SYM=55;
//    public static final int ELSIF_SYM=56;
//    public static final int END_SYM=57;
//    public static final int EQ_SYM=58;
//    public static final int EXISTS=59;
//    public static final int E_i=60;
//    public static final int FALSE_SYM=61;
//    public static final int FETCH_SYM=62;
//    public static final int FIELD=63;
//    public static final int FILE_SYM=64;
//    public static final int FLOAT_SYM=65;
//    public static final int FOR_SYM=66;
//    public static final int FROM=67;
//    public static final int FULL=68;
//    public static final int FUNCEXP=69;
//    public static final int FUNCTION_SYM=70;
//    public static final int F_i=71;
//    public static final int GET=72;
//    public static final int GROUP_SYM=73;
//    public static final int GTH=74;
//    public static final int G_i=75;
//    public static final int HAVING=76;
//    public static final int HEX=77;
//    public static final int HEX_DIGIT=78;
//    public static final int HEX_DIGIT_FRAGMENT=79;
//    public static final int H_i=80;
//    public static final int ID=81;
//    public static final int IF=82;
//    public static final int IFNULL=83;
//    public static final int IGNORE_SYM=84;
//    public static final int INDEX_SYM=85;
//    public static final int INNER_SYM=86;
//    public static final int INTEGER_NUM=87;
//    public static final int INTEGER_SYM=88;
//    public static final int IN_SYM=89;
//    public static final int ISNOTNULL=90;
//    public static final int ISNULL=91;
//    public static final int IS_SYM=92;
//    public static final int I_i=93;
//    public static final int JOIN_SYM=94;
//    public static final int J_i=95;
//    public static final int K_i=96;
//    public static final int LBRACK=97;
//    public static final int LCURLY=98;
//    public static final int LEFT=99;
//    public static final int LET=100;
//    public static final int LIMIT=101;
//    public static final int LISTEXP=102;
//    public static final int LONGBLOB=103;
//    public static final int LONGTEXT=104;
//    public static final int LONG_SYM=105;
//    public static final int LOWER=106;
//    public static final int LPAREN=107;
//    public static final int LTH=108;
//    public static final int L_i=109;
//    public static final int MAX_SYM=110;
//    public static final int MEDIUMBLOB=111;
//    public static final int MEDIUMINT=112;
//    public static final int MINUS=113;
//    public static final int MIN_SYM=114;
//    public static final int MOD_SYM=115;
//    public static final int M_i=116;
//    public static final int NEGATION=117;
//    public static final int NOT_EQ=118;
//    public static final int NOT_IN=119;
//    public static final int NOT_SYM=120;
//    public static final int NULL_SYM=121;
//    public static final int NUMERIC_SYM=122;
//    public static final int N_i=123;
//    public static final int OCT=124;
//    public static final int OFFSET_SYM=125;
//    public static final int ON=126;
//    public static final int ORDER_SYM=127;
//    public static final int OR_SYM=128;
//    public static final int OUTER=129;
//    public static final int O_i=130;
//    public static final int PARAMPLACEHOLDER=131;
//    public static final int PARENEXP=132;
//    public static final int PLUS=133;
//    public static final int POWER_OP=134;
//    public static final int P_i=135;
//    public static final int QUESTION=136;
//    public static final int QUOTE=137;
//    public static final int QUOTED_ID=138;
//    public static final int QUOTED_STRING=139;
//    public static final int Q_i=140;
//    public static final int RBRACK=141;
//    public static final int RCURLY=142;
//    public static final int REAL=143;
//    public static final int REAL_NUMBER=144;
//    public static final int RIGHT=145;
//    public static final int RPAREN=146;
//    public static final int R_i=147;
//    public static final int SELECT=148;
//    public static final int SEMI=149;
//    public static final int SET_VAR=150;
//    public static final int SHIFT_LEFT=151;
//    public static final int SHIFT_RIGHT=152;
//    public static final int SMALLINT=153;
//    public static final int SQUOTE=154;
//    public static final int STRAIGHT_JOIN=155;
//    public static final int STRING_SYM=156;
//    public static final int SUM=157;
//    public static final int S_i=158;
//    public static final int TABLENAME=159;
//    public static final int THEN_SYM=160;
//    public static final int TIME_SYM=161;
//    public static final int TINYBLOB=162;
//    public static final int TINYINT=163;
//    public static final int TINYTEXT=164;
//    public static final int TRUE_SYM=165;
//    public static final int T_i=166;
//    public static final int UNSIGNED_SYM=167;
//    public static final int UPPER=168;
//    public static final int USE_SYM=169;
//    public static final int U_i=170;
//    public static final int VARBINARY=171;
//    public static final int VARCHAR=172;
//    public static final int VERTBAR=173;
//    public static final int V_i=174;
//    public static final int WHEN_SYM=175;
//    public static final int WHERE=176;
//    public static final int WHITE_SPACE=177;
//    public static final int W_i=178;
//    public static final int XML_SYM=179;
//    public static final int X_i=180;
//    public static final int Y_i=181;
//    public static final int Z_i=182;
//
//    // delegates
//    public Parser[] getDelegates() {
//        return new Parser[] {};
//    }
//
//    // delegators
//
//
//    public SQLExpressionParser(TokenStream input) {
//        this(input, new RecognizerSharedState());
//    }
//    public SQLExpressionParser(TokenStream input, RecognizerSharedState state) {
//        super(input, state);
//    }
//
//protected TreeAdaptor adaptor = new CommonTreeAdaptor();
//
//public void setTreeAdaptor(TreeAdaptor adaptor) {
//    this.adaptor = adaptor;
//}
//public TreeAdaptor getTreeAdaptor() {
//    return adaptor;
//}
//    public String[] getTokenNames() { return SQLExpressionParser.tokenNames; }
//    public String getGrammarFileName() { return "/home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g"; }
//
//
//    	@Override
//    	public void emitErrorMessage(String message)
//    	{
//    		throw new RuntimeException(message);
//    	}
//
//
//    public static class expression_return extends ParserRuleReturnScope {
//        CommonTree tree;
//        public Object getTree() { return tree; }
//    };
//
//
//    // $ANTLR start "expression"
//    // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:49:1: expression : orExpression EOF !;
//    public final SQLExpressionParser.expression_return expression() throws RecognitionException {
//        SQLExpressionParser.expression_return retval = new SQLExpressionParser.expression_return();
//        retval.start = input.LT(1);
//
//
//        CommonTree root_0 = null;
//
//        Token EOF2=null;
//        SQLExpressionParser.orExpression_return orExpression1 =null;
//
//
//        CommonTree EOF2_tree=null;
//
//        try {
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:50:5: ( orExpression EOF !)
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:51:5: orExpression EOF !
//            {
//            root_0 = (CommonTree)adaptor.nil();
//
//
//            pushFollow(FOLLOW_orExpression_in_expression110);
//            orExpression1=orExpression();
//
//            state._fsp--;
//            if (state.failed) return retval;
//            if ( state.backtracking==0 ) adaptor.addChild(root_0, orExpression1.getTree());
//
//            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_expression112); if (state.failed) return retval;
//
//            }
//
//            retval.stop = input.LT(-1);
//
//
//            if ( state.backtracking==0 ) {
//
//            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
//            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
//            }
//        }
//        catch (RecognitionException re) {
//            reportError(re);
//            recover(input,re);
//    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
//
//        }
//
//        finally {
//        	// do for sure before leaving
//        }
//        return retval;
//    }
//    // $ANTLR end "expression"
//
//
//    public static class orExpression_return extends ParserRuleReturnScope {
//        CommonTree tree;
//        public Object getTree() { return tree; }
//    };
//
//
//    // $ANTLR start "orExpression"
//    // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:54:1: orExpression : andExpression ( OR_SYM ^ andExpression )* ;
//    public final SQLExpressionParser.orExpression_return orExpression() throws RecognitionException {
//        SQLExpressionParser.orExpression_return retval = new SQLExpressionParser.orExpression_return();
//        retval.start = input.LT(1);
//
//
//        CommonTree root_0 = null;
//
//        Token OR_SYM4=null;
//        SQLExpressionParser.andExpression_return andExpression3 =null;
//
//        SQLExpressionParser.andExpression_return andExpression5 =null;
//
//
//        CommonTree OR_SYM4_tree=null;
//
//        try {
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:55:2: ( andExpression ( OR_SYM ^ andExpression )* )
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:56:2: andExpression ( OR_SYM ^ andExpression )*
//            {
//            root_0 = (CommonTree)adaptor.nil();
//
//
//            pushFollow(FOLLOW_andExpression_in_orExpression128);
//            andExpression3=andExpression();
//
//            state._fsp--;
//            if (state.failed) return retval;
//            if ( state.backtracking==0 ) adaptor.addChild(root_0, andExpression3.getTree());
//
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:57:2: ( OR_SYM ^ andExpression )*
//            loop1:
//            do {
//                int alt1=2;
//                int LA1_0 = input.LA(1);
//
//                if ( (LA1_0==OR_SYM) ) {
//                    alt1=1;
//                }
//
//
//                switch (alt1) {
//            	case 1 :
//            	    // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:58:3: OR_SYM ^ andExpression
//            	    {
//            	    OR_SYM4=(Token)match(input,OR_SYM,FOLLOW_OR_SYM_in_orExpression135); if (state.failed) return retval;
//            	    if ( state.backtracking==0 ) {
//            	    OR_SYM4_tree = 
//            	    (CommonTree)adaptor.create(OR_SYM4)
//            	    ;
//            	    root_0 = (CommonTree)adaptor.becomeRoot(OR_SYM4_tree, root_0);
//            	    }
//
//            	    pushFollow(FOLLOW_andExpression_in_orExpression138);
//            	    andExpression5=andExpression();
//
//            	    state._fsp--;
//            	    if (state.failed) return retval;
//            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, andExpression5.getTree());
//
//            	    }
//            	    break;
//
//            	default :
//            	    break loop1;
//                }
//            } while (true);
//
//
//            }
//
//            retval.stop = input.LT(-1);
//
//
//            if ( state.backtracking==0 ) {
//
//            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
//            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
//            }
//        }
//        catch (RecognitionException re) {
//            reportError(re);
//            recover(input,re);
//    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
//
//        }
//
//        finally {
//        	// do for sure before leaving
//        }
//        return retval;
//    }
//    // $ANTLR end "orExpression"
//
//
//    public static class andExpression_return extends ParserRuleReturnScope {
//        CommonTree tree;
//        public Object getTree() { return tree; }
//    };
//
//
//    // $ANTLR start "andExpression"
//    // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:62:1: andExpression : exp1= relationalExpression ( AND_SYM ^ relationalExpression )* ;
//    public final SQLExpressionParser.andExpression_return andExpression() throws RecognitionException {
//        SQLExpressionParser.andExpression_return retval = new SQLExpressionParser.andExpression_return();
//        retval.start = input.LT(1);
//
//
//        CommonTree root_0 = null;
//
//        Token AND_SYM6=null;
//        SQLExpressionParser.relationalExpression_return exp1 =null;
//
//        SQLExpressionParser.relationalExpression_return relationalExpression7 =null;
//
//
//        CommonTree AND_SYM6_tree=null;
//
//        try {
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:63:2: (exp1= relationalExpression ( AND_SYM ^ relationalExpression )* )
//            // /home/hpccuser/GIT/hpcc-jdbc/src/org/hpccsystems/jdbcdriver/antlr/grammar/SQLExpression.g:64:2: exp1= relationalExpression ( AND_SYM ^ relationalExpression )*
//            {
//            root_0 = (CommonTree)adaptor.nil();
//
//
//            pushFollow(FOLLOW_relationalExpression_in_andExpression156);
//            exp1=relationalExpression();
//
//            state._fsp--;
//            if (state.failed) return retval;
//            if ( state.backtracking==0 ) adaptor.addChild(root_0, exp1.getTree());
//
